tests/snapshots/tui_view_test__search_pane_focused.snap
---
source: tests/tui_view_test.rs
expression: "(vm.search.is_focused, vm.list.is_focused, vm.detail.is_focused)"
---
(
    true,
    false,
    false,
)
