tests/snapshots/tui_view_test__view_search.snap
---
source: tests/tui_view_test.rs
expression: "(&vm.search.query, vm.search.is_focused, vm.search.result_count,\nvm.list.tickets.len(), vm.total_all_tickets,)"
---
(
    "bug",
    true,
    2,
    2,
    3,
)
